--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello CHOI!</title>
+    <title>MyWeb</title>
 </head>
 <body>
-    <h1>This is Right?</h1>
+    <h1>Hello CHOI!</h1>
 </body>
