--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
-<!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyWeb</title>
+    <title></title>
 </head>
 <body>
-    <h1>Hello CHOI!</h1>
+    <div class="container wrapper">
+        <div id="top">
+            <h1>Welcome to 22000753's Homepage</h1>
+            <p>Use the menu to select different Stylesheets</p>
+        </div>
+        <div class="wrapper">
+            <div id="menubar">
+                <ui id="menulist">
+                    <li class="menuitem"><a href="style1.htm">Stylesheet 1</a></li>
+                    <li class="menuitem"><a href="style2.htm">Stylesheet 2</a></li>
+                    <li class="menuitem">Stylesheet 3</li>
+                    <li class="menuitem">Stylesheet 4</li>
+                    <li class="menuitem">No Stylesheet</li>
+                    <br>
+                </ul>
+            </div>
+            <div id="main">
+                <h1>Same Page Different Stylesheets</h1>
+                <p>This is a demonstration of how different stylesheets can change the layout of your HTML page. You can change the layout of this page by selecting different stylesheets in the menu, or by selecting one of the following links:</p>
+                <a href="style1.htm">Stylesheet1</a>, 
+                <a href="style2.htm">Stylesheet2</a>, 
+                <a>Stylesheet3</a>, 
+                <a>Stylesheet4</a>.
+                <h2>No Styles</h2>
+                <p>This page uses DIV elements to group different sections of the HTML page. Click here to see how the page looks like with no stylesheet:</p>
+                <a href="index.html">No Stylesheet</a>.
+            </div>
+            <div id="sidebar">
+                <h3>Side-Bar</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+            </div>
+        </div>
+        <div id="bottom">
+
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+        
+        </div>
+    </div>
 </body>
+</html>
